# mis-eventos

./: .dockerignore  .gitignore  CAMBIOS-REALIZADOS.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml  ruff.toml  seed_db.py
backend/alembic/: env.py
backend/alembic/versions/: 24e327823a26_initial_migration_users_events_sessions_.py  c3b8d74c4d47_add_speaker_details_to_sessions.py  db14ca09ca76_add_category_and_tags_to_events.py
backend/app/: config.py  database.py  dependencies.py  main.py  seed.py
backend/app/core/: enums.py  exceptions.py  security.py
backend/app/middleware/: cache.py
backend/app/models/: event.py  registration.py  session.py  user.py
backend/app/repositories/: event_repository.py  registration_repository.py  session_repository.py  user_repository.py
backend/app/routers/: admin.py  auth.py  events.py  registrations.py  sessions.py
backend/app/schemas/: common.py  event.py  registration.py  session.py  user.py
backend/app/services/: admin_service.py  auth_service.py  event_service.py  registration_service.py  session_service.py
backend/tests/: conftest.py  test_auth.py  test_events.py  test_registrations.py  test_sessions.py
frontend/: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  TESTS-TYPESCRIPT-FIX.md  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: admin.api.ts  auth.api.ts  client.ts  events.api.ts  sessions.api.ts  (+1 more)
(+37 files in other folders)
